--- a/index.html.html
+++ b/index.html.html
@@ -200,6 +200,9 @@
                         <li><a href="#">terms of use</a></li>
                         <li><a href="">personal data management</a></li>
                         <li><a href="#">cookies</a></li>
+                        <li><a href="#">terms of use</a></li>
+                        <li><a href="">personal data management</a></li>
+                        <li><a href="#">cookies</a></li>
                     </ul>
                 </div>
             </div>
